причесал бы получше, еслиб не дедлайн
